tests/cases/syntax/correct/conditional/test-cond.soccam
;; test-cond.soccam
;; Tests: 
(module test-cond soccam
  (decl ([x int])
    (cond
      [(> x 3)  (:= x 1)]
      [(< x 10) (:= x 2)]
      ))
)
